--- a/backend/.env
+++ b/backend/.env
@@ -11,3 +11,4 @@ EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USER=quan0237@gmail.com  # <-- Thay bằng email của bạn
 EMAIL_PASS=vrgggcbkuutlwjhm       
+GOOGLE_AI_API_KEY=AIzaSyBZKNHPo4eAIe0vItuZrf4QczOWZ4SVSQY
